FD-157: Added new menu items. IE warning overlaps, needs fixing

--- a/src/styles/header-footer.css
+++ b/src/styles/header-footer.css
@@ -207,7 +207,7 @@
 
 .footer{
 	background-color: #455A64;
-	min-height: 52px;
+	min-height: 52px !important;
 }
 
 .footerlogo {
